--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,11 +1,42 @@
 server:
-  port: 10000
+  port: 10010
+
+spring:
+  profiles:
+    active: master
+  application:
+    name: eureka
+
+# 远程管理,暴露监控端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: ALWAYS
+
+eureka-cluster-register:
+  ip: localhost
+  port: 10010
+
 
 eureka:
   instance:
     hostname: localhost
+  server:
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 5000
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://${eureka-cluster-register.ip}:${eureka-cluster-register.port}/eureka/
+
+
+
+
+
+
+
