--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -51,7 +51,7 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://127.0.0.1:10010/eureka/
+      defaultZone: http://172.16.114.245:10010/eureka/
 
 
 # 远程管理,暴露监控端点
@@ -70,6 +70,7 @@ app:
     extract-request-params: true     #是否提取请求参数， 上线u若影响性能可以关闭
     extract-response-body: true      #是否提取响应体， 上线u若影响性能可以关闭
     enable-token-auth: true          #是否开启token验证
+    enable-token-auth-check-cache: true          #是否token必须存在网关缓存中
     token-auth-ignore-path: /actuator,/actuator/*,/hello,/login,/loginOut,/refreshToken #忽略token验证的路由path， 多个path使用逗号分隔
   token:
     expire-minutes: 30   #token过期时间（分钟）
