--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
   #spring 默认的json序列化, 设置时区与日期格式
   jackson:
     time-zone: GMT+8
-    #date-format: yyyy-MM-dd HH:mm:ss
+    date-format: yyyy-MM-dd HH:mm:ss
 
   #jmx远程管理
   jmx:
@@ -73,11 +73,11 @@ app:
     enable-token-auth-check-cache: true          #是否token必须存在网关缓存中
     token-auth-ignore-path: /actuator,/actuator/*,/hello,/login,/loginOut,/refreshToken #忽略token验证的路由path， 多个path使用逗号分隔
   token:
-    expire-minutes: 30   #token过期时间（分钟）
+    expire-minutes: 300   #token过期时间（分钟）
     sign-key: ezml-sign-key  #token生成使用的加密密钥
   service:
-#    user-service: USER-SERVICE  #用户服务的注册名称
-#    user-service-api: /user/getUserInfo  #用户服务的接口地址
-    user-service: DEMO  #用户服务的注册名称
-    user-service-api: /getUserInfo  #用户服务的接口地址
+    user-service: USER-SERVICE  #用户服务的注册名称
+    user-service-api: /user/getUserInfo  #用户服务的接口地址
+#    user-service: DEMO  #用户服务的注册名称
+#    user-service-api: /getUserInfo  #用户服务的接口地址
 
