--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -34,6 +34,13 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true  # 服务名小写
+  redis:
+    database: 0
+    host: 172.16.114.245
+    port: 6379
+    password: aispeech2020
+    timeout: 1000
+
 
 #      routes:
 #        - id: demo-service
@@ -44,6 +51,7 @@ spring:
 #            # 加上StripPrefix=1，否则转发到后端服务时会带上consumer前缀
 #          filters:
 #            - StripPrefix=1
+
 
 
 eureka:
@@ -58,6 +66,9 @@ eureka:
     registry-fetch-interval-seconds: 5
 ribbon:
   server-list-refresh-interval: 3000 # Ribbon更新周期
+
+
+
 
 # 远程管理,暴露监控端点
 management:
@@ -75,7 +86,7 @@ app:
     extract-request-params: true     #是否提取请求参数， 上线u若影响性能可以关闭
     extract-response-body: true      #是否提取响应体， 上线u若影响性能可以关闭
     enable-token-auth: true          #是否开启token验证
-    enable-token-auth-check-cache: true          #是否token必须存在网关缓存中
+    enable-token-auth-check-cache: false          #是否token必须存在网关缓存中
     token-auth-ignore-path: /actuator,/actuator/*,/hello,/login,/loginOut,/refreshToken #忽略token验证的路由path， 多个path使用逗号分隔
   token:
     expire-minutes: 300   #token过期时间（分钟）
