--- a/consumer-service-demo/Dockerfile
+++ b/consumer-service-demo/Dockerfile
@@ -4,4 +4,4 @@ ADD target/demo-service-0.0.1-SNAPSHOT.jar /app.jar
 ENV TimeZone Asia/Shanghai
 RUN bash -c  'touch /app.jar'
 EXPOSE 10020
-ENTRYPOINT ["sh","-c","java ${JAVA_OPTS} -jar /app.jar ${EXT_CONFIG}"]
+ENTRYPOINT ["sh","-c","java ${EZML_DEMO_SERVICE_JAVA_OPTS} -jar /app.jar ${EZML_DEMO_SERVICE_EXT_CONFIG}"]
