--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -4,4 +4,4 @@ ADD target/gateway-0.0.1-SNAPSHOT.jar /app.jar
 ENV TimeZone Asia/Shanghai
 RUN bash -c  'touch /app.jar'
 EXPOSE 9100
-ENTRYPOINT ["sh","-c","java ${JAVA_OPTS} -jar /app.jar ${EXT_CONFIG}"]
+ENTRYPOINT ["sh","-c","java ${EZML_GATEWAY_JAVA_OPTS} -jar /app.jar ${EZML_GATEWAY_EXT_CONFIG}"]
