--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -49,7 +49,12 @@
             <version>3.4.0</version>
         </dependency>
 
-
+        <!-- 通用工具库 : huTool -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.1.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
