更新配置文件中的eureka相关配置

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -75,6 +75,7 @@ spring:
 eureka:
   instance:
     prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
   client:
     service-url:
       defaultZone: ${app.eureka-server-uri}eureka/
