1. 问题原因是网关记录响应时解析响应报错了, 针对文件流 不再解析 2. 正式环境运行时 不需要记录请求响应

--- a/consumer-service-demo/src/main/resources/application.yml
+++ b/consumer-service-demo/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: demo    #服务注册的名称
+  servlet:
+    multipart:
+      max-file-size:  500MB
+      max-request-size: 500MB
+
 eureka:
   instance:
     prefer-ip-address: true #优先使用ip地址注册
