--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -103,8 +103,8 @@ management:
 app:
   eureka-server-uri: http://127.0.0.1:10010/
   filter:
-    extract-request-params: true     #是否提取请求参数， 上线u若影响性能可以关闭
-    extract-response-body: true      #是否提取响应体， 上线u若影响性能可以关闭
+    extract-request-params: true     #是否提取请求参数， 上线若影响性能可以关闭
+    extract-response-body: true      #是否提取响应体， 上线若影响性能可以关闭
     enable-token-auth: true          #是否开启token验证
     enable-token-auth-check-cache: false          #是否token必须存在网关缓存中
     token-auth-ignore-path: /eurekaServer,/eurekaServer/*,/eureka,/eureka/*,/actuator,/actuator/*,/hello,/login,/loginOut,/refreshToken #忽略token验证的路由path， 多个path使用逗号分隔
